--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "dependencies": {
     "@types/fs-extra": "0.0.37",
-    "@types/node": "^7.0.5",
+    "@types/node": "^7.0.8",
     "@types/semver": "^5.3.30",
     "semver": "5.3.0",
-    "util.rstrip": "0.0.11"
+    "util.rstrip": "0.0.12"
   },
   "devDependencies": {
     "@types/fs-extra": "0.0.37",
-    "@types/mocha": "^2.2.39",
+    "@types/lodash": "^4.14.55",
+    "@types/mocha": "2.2.40",
     "coveralls": "^2.12.0",
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
@@ -34,12 +35,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.8",
     "jsdoc": "^3.4.3",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
-    "util.fixture": "0.0.31",
-    "util.pkgwrap": "0.0.11"
+    "util.fixture": "0.0.32",
+    "util.pkgwrap": "0.0.14"
   },
   "main": "./index.js",
   "types": "./index.d.ts",
