--- a/package.json
+++ b/package.json
@@ -16,32 +16,34 @@
     "node": ">=7.5"
   },
   "dependencies": {
-    "@types/fs-extra": "0.0.37",
-    "@types/node": "^7.0.8",
-    "@types/semver": "^5.3.30",
     "semver": "5.3.0",
-    "util.rstrip": "0.0.12"
+    "util.chdir": "0.0.21",
+    "util.pkgwrap": "0.0.17",
+    "util.rstrip": "0.0.13"
   },
   "devDependencies": {
-    "@types/fs-extra": "0.0.37",
+    "@types/fs-extra": "2.0.0",
     "@types/lodash": "^4.14.55",
     "@types/mocha": "2.2.40",
+    "@types/node": "^7.0.8",
+    "@types/semver": "^5.3.31",
     "coveralls": "^2.12.0",
-    "fs-extra": "^2.0.0",
+    "fs-extra": "^2.1.2",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
     "gulp-jsdoc-to-markdown": "^1.2.2",
     "gulp-jsdoc3": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.8",
+    "intelli-espower-loader": "^1.0.1",
     "jsdoc": "^3.4.3",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
+    "power-assert": "^1.4.2",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
-    "util.fixture": "0.0.32",
-    "util.pkgwrap": "0.0.14"
+    "util.fixture": "0.0.35"
   },
   "main": "./index.js",
   "types": "./index.d.ts",
