--- a/package.json
+++ b/package.json
@@ -17,43 +17,32 @@
   },
   "dependencies": {
     "semver": "5.3.0",
-    "util.chdir": "0.0.21",
-    "util.pkgwrap": "0.0.18",
+    "util.chdir": "0.0.22",
+    "util.pkgwrap": "0.0.20",
     "util.rstrip": "0.0.14"
   },
   "devDependencies": {
     "@types/fs-extra": "2.0.0",
-    "@types/lodash": "^4.14.55",
-    "@types/mocha": "2.2.40",
-    "@types/node": "^7.0.8",
+    "@types/lodash": "^4.14.61",
+    "@types/node": "^7.0.12",
     "@types/semver": "^5.3.31",
-    "coveralls": "^2.12.0",
+    "ava": "^0.18.2",
+    "coveralls": "^2.13.0",
     "fs-extra": "^2.1.2",
-    "gulp": "^3.9.1",
-    "gulp-cli": "^1.2.2",
-    "gulp-jsdoc-to-markdown": "^1.2.2",
-    "gulp-jsdoc3": "^1.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.8",
-    "intelli-espower-loader": "^1.0.1",
-    "jsdoc": "^3.4.3",
     "lodash": "^4.17.4",
-    "mocha": "^3.2.0",
-    "nyc": "^10.1.2",
-    "power-assert": "^1.4.2",
-    "tslint": "^4.5.1",
-    "typescript": "^2.2.1",
-    "util.fixture": "0.0.35"
+    "nyc": "^10.2.0",
+    "tslint": "^5.0.0",
+    "typescript": "^2.2.2"
   },
   "main": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "all": "npm run lint && npm run build && npm test && npm run report",
+    "all": "npm install && npm run lint && npm run build && npm test && npm run report",
     "build": "./node_modules/.bin/pkgwrap --build",
     "coverage": "./node_modules/.bin/pkgwrap --coverage",
     "lint": "./node_modules/.bin/pkgwrap --lint",
     "postinstall": "./node_modules/.bin/pkgwrap --postinstall",
     "report": "./node_modules/.bin/pkgwrap --reporting",
-    "test": "./node_modules/.bin/pkgwrap --testing"
+    "test": "./node_modules/.bin/pkgwrap --testing --ava"
   }
 }
