--- a/package.json
+++ b/package.json
@@ -17,32 +17,33 @@
   },
   "dependencies": {
     "semver": "5.3.0",
-    "util.chdir": "0.0.25",
-    "util.pkgwrap": "0.0.26",
-    "util.rstrip": "0.0.17"
+    "util.chdir": "0.0.27",
+    "util.pkgwrap": "0.0.43",
+    "util.rstrip": "0.0.18"
   },
   "devDependencies": {
-    "@types/fs-extra": "2.1.0",
-    "@types/lodash": "^4.14.63",
-    "@types/node": "^7.0.13",
+    "@types/fs-extra": "3.0.1",
+    "@types/lodash": "^4.14.64",
+    "@types/node": "^7.0.21",
     "@types/semver": "^5.3.31",
     "ava": "^0.19.1",
-    "coveralls": "^2.13.0",
-    "fs-extra": "^2.1.2",
+    "coveralls": "^2.13.1",
+    "fs-extra": "^3.0.1",
     "lodash": "^4.17.4",
-    "nyc": "^10.2.0",
-    "tslint": "^5.1.0",
-    "typescript": "^2.2.2"
+    "nyc": "^10.3.2",
+    "tslint": "^5.2.0",
+    "typescript": "^2.3.2"
   },
   "main": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "all": "npm install && npm run lint && npm run build && npm test && npm run report",
-    "build": "./node_modules/.bin/pkgwrap --build",
-    "coverage": "./node_modules/.bin/pkgwrap --coverage",
-    "lint": "./node_modules/.bin/pkgwrap --lint",
-    "postinstall": "./node_modules/.bin/pkgwrap --postinstall",
-    "report": "./node_modules/.bin/pkgwrap --reporting",
-    "test": "./node_modules/.bin/pkgwrap --testing --ava"
+    "all": "npm install && npm run clean && npm run lint && npm run build && npm test && npm run report",
+    "build": "pkgwrap --build",
+    "clean": "pkgwrap --clean",
+    "coverage": "pkgwrap --coverage",
+    "lint": "pkgwrap --lint",
+    "postinstall": "pkgwrap --postinstall",
+    "report": "pkgwrap --reporting",
+    "test": "pkgwrap --testing --ava"
   }
 }
