--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "util.env",
-	"version": "0.0.32",
+	"version": "0.0.33",
 	"author": "jmquigley <jmquigley@outlook.com>",
 	"description": "Manages environment type and versioning for a project.",
 	"private": false,
@@ -24,9 +24,9 @@
 	],
 	"dependencies": {
 		"semver": "5.6.0",
-		"util.chdir": "0.0.40",
-		"util.join": "^0.0.24",
-		"util.rstrip": "0.0.47"
+		"util.chdir": "0.0.41",
+		"util.join": "^0.0.25",
+		"util.rstrip": "0.0.53"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.2.3",
@@ -36,25 +36,25 @@
 		"@babel/preset-typescript": "^7.3.3",
 		"@babel/runtime": "^7.3.4",
 		"@types/fs-extra": "^5.0.5",
-		"@types/jest": "^24.0.9",
-		"@types/lodash": "^4.14.122",
-		"@types/node": "^11.10.5",
+		"@types/jest": "^24.0.11",
+		"@types/lodash": "^4.14.123",
+		"@types/node": "^11.11.1",
 		"@types/semver": "^5.5.0",
 		"babel-minify": "^0.5.0",
 		"babel-preset-minify": "^0.5.0",
 		"coveralls": "^3.0.3",
 		"debug": "^4.1.1",
 		"fs-extra": "^7.0.1",
-		"jest": "^24.3.0",
+		"jest": "^24.4.0",
 		"lodash": "^4.17.11",
 		"prettier": "^1.16.4",
 		"tslint": "^5.13.1",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.3.3333",
-		"util.pkgwrap": "^0.0.104"
+		"util.pkgwrap": "^0.0.105"
 	},
 	"scripts": {
-		"all": "yarn install && yarn build && yarn test",
+		"all": "yarn install && yarn build && yarn test && yarn manifest",
 		"build": "yarn clean && yarn lint && yarn prettier && yarn build:es && yarn build:umd",
 		"build:es": "tsc -p . && minify index.js --out-file index.es.min.js",
 		"build:umd": "babel index.js --out-file index.umd.min.js",
@@ -62,7 +62,7 @@
 		"clean:dist": "yarn clean && rimraf node_modules/ yarn.lock",
 		"coverage": "pkgwrap --coverage --jest",
 		"lint": "pkgwrap --lint",
-		"prepublishOnly": "yarn run all",
+		"manifest": "npm pack --dry-run",
 		"prettier": "prettier --write \"**/*.{ts,tsx,js,json,yaml,yml,css}\"",
 		"test": "jest"
 	}
