--- a/package.json
+++ b/package.json
@@ -1,68 +1,69 @@
 {
-  "name": "util.env",
-  "version": "0.0.34",
-  "author": "jmquigley <jmquigley@outlook.com>",
-  "description": "Manages environment type and versioning for a project.",
-  "private": false,
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jmquigley/util.env"
-  },
-  "bugs": {
-    "url": "https://github.com/jmquigley/util.env/issues"
-  },
-  "engines": {
-    "node": ">=7.x"
-  },
-  "main": "./index.umd.min.js",
-  "module": "./index.es.min.js",
-  "types": "./index.d.ts",
-  "files": [
-    "index.*.min.js",
-    "index.d.ts"
-  ],
-  "dependencies": {
-    "semver": "6.3.0",
-    "util.chdir": "0.0.42",
-    "util.join": "^0.0.26",
-    "util.rstrip": "0.0.57"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-transform-modules-umd": "^7.7.4",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-typescript": "^7.7.4",
-    "@babel/runtime": "^7.7.6",
-    "@types/fs-extra": "^8.0.1",
-    "@types/jest": "^24.0.23",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.17",
-    "@types/semver": "^6.2.0",
-    "babel-minify": "^0.5.1",
-    "babel-preset-minify": "^0.5.1",
-    "coveralls": "^3.0.9",
-    "debug": "^4.1.1",
-    "fs-extra": "^8.1.0",
-    "jest": "^24.9.0",
-    "lodash": "^4.17.15",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.3",
-    "util.pkgwrap": "^0.0.115"
-  },
-  "scripts": {
-    "all": "yarn install && yarn build && yarn test && yarn manifest",
-    "build": "yarn clean && yarn lint && yarn prettier && yarn build:es && yarn build:umd",
-    "build:es": "tsc -p . && minify index.js --out-file index.es.min.js",
-    "build:umd": "babel index.js --out-file index.umd.min.js",
-    "clean": "pkgwrap --clean",
-    "clean:dist": "yarn clean && rimraf node_modules/ yarn.lock",
-    "coverage": "pkgwrap --coverage --jest",
-    "lint": "pkgwrap --lint",
-    "manifest": "npm pack --dry-run",
-    "prettier": "pkgwrap --prettier",
-    "test": "jest"
-  }
+	"name": "util.env",
+	"version": "0.0.35",
+	"author": "jmquigley <jmquigley@outlook.com>",
+	"description": "Manages environment type and versioning for a project.",
+	"private": false,
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/jmquigley/util.env"
+	},
+	"bugs": {
+		"url": "https://github.com/jmquigley/util.env/issues"
+	},
+	"engines": {
+		"node": ">=7.x"
+	},
+	"prettier": "@jmquigley/prettier-config",
+	"main": "./index.umd.min.js",
+	"module": "./index.es.min.js",
+	"types": "./index.d.ts",
+	"files": [
+		"index.*.min.js",
+		"index.d.ts"
+	],
+	"dependencies": {
+		"semver": "6.3.0",
+		"util.chdir": "0.0.43",
+		"util.join": "^0.0.27",
+		"util.rstrip": "0.0.58"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.7.5",
+		"@babel/core": "^7.7.5",
+		"@babel/plugin-transform-modules-umd": "^7.7.4",
+		"@babel/preset-env": "^7.7.6",
+		"@babel/preset-typescript": "^7.7.4",
+		"@babel/runtime": "^7.7.6",
+		"@types/fs-extra": "^8.0.1",
+		"@types/jest": "^24.0.23",
+		"@types/lodash": "^4.14.149",
+		"@types/node": "^12.12.17",
+		"@types/semver": "^6.2.0",
+		"babel-minify": "^0.5.1",
+		"babel-preset-minify": "^0.5.1",
+		"coveralls": "^3.0.9",
+		"debug": "^4.1.1",
+		"fs-extra": "^8.1.0",
+		"jest": "^24.9.0",
+		"lodash": "^4.17.15",
+		"tslint": "^5.20.1",
+		"tslint-config-prettier": "^1.18.0",
+		"typescript": "^3.7.3",
+		"util.pkgwrap": "^0.0.115"
+	},
+	"scripts": {
+		"all": "yarn install && yarn build && yarn test && yarn manifest",
+		"build": "yarn clean && yarn lint && yarn prettier && yarn build:es && yarn build:umd",
+		"build:es": "tsc -p . && minify index.js --out-file index.es.min.js",
+		"build:umd": "babel index.js --out-file index.umd.min.js",
+		"clean": "pkgwrap --clean",
+		"clean:dist": "yarn clean && rimraf node_modules/ yarn.lock",
+		"coverage": "pkgwrap --coverage --jest",
+		"lint": "pkgwrap --lint",
+		"manifest": "npm pack --dry-run",
+		"prettier": "pkgwrap --prettier",
+		"test": "jest"
+	}
 }
